--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -1,223 +1,230 @@
-\documentclass{ees}
+\documentclass[shorttitlesize=50,tocstyle=ref-genre]{ees}
+
+\shorttitle{Der wundervolle Tod}
 
 \begin{document}
 
 \eesTitlePage
 
 \eesCriticalReport{
-  –  & –   & A       & S 2 may be replaced by A throughout the piece \\
-  3  & 54  & vl 2    & 7th \eighthNote\ in \A1: e′8 \\
-  5  & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
-     & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
+  –  & –   & A        & S 2 has been replaced by A throughout the work. \\
+  3  & 54  & vl 2     & 7th \eighthNote\ in \A1: e′8 \\
+  5  & 52  & vla      & 2nd \eighthNote\ in \A1: \flat b8 \\
+     & 242 & Eidli    & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
   7  & 71  & Johannes & 1st \halfNote\ in \A1: \flat g′4–\flat g′8–\flat g′8 \\
-  9  & 70  & T       & 1st \halfNote\ in \A1: f2 \\
-     & 117 & B       & 8th \sixteenthNote\ in \A1: \flat f16 \\
-  11 & 1   & soli    & 5th \eighthNote\ missing in \A1 \\
-  16 & 76  & vla     & 2nd \halfNote\ in \A1: c′4–c′4 \\
+  9  & 70  & T        & 1st \halfNote\ in \A1: f2 \\
+     & 117 & B        & 8th \sixteenthNote\ in \A1: \flat f16 \\
+  11 & 1   & soli     & 5th \eighthNote\ missing in \A1 \\
+  16 & 76  & vla      & 2nd \halfNote\ in \A1: c′4–c′4 \\
 }
 
-Eidli (S = Canto I)
-Maria (A = Canto II)
-Eine aus den Weibern (S/A)
-Ein andrer aus dem Volke (T)
-Jeſus (T)
-Johannes (T)
-Lazarus (T)
-Einer aus dem Volke (B)
-Der römiſche Hauptmann (B)
-Ein Soldat (B)
-
-
 \eesToc{
+  {\ltseries\textmd{Soloists}\\[1ex]
+  \textit{Canto I}\\
+  Eidli\\
+  Eine aus den Weibern\\[1ex]
+  \textit{Canto II}\\
+  Maria\\[1ex]
+  \textit{Tenore}\\
+  Ein andrer aus dem Volke\\
+  Jeſus\\
+  Johannes\\
+  Lazarus\\[1ex]
+  \textit{Basso}\\
+  Einer aus dem Volke\\
+  Ein Soldat\\
+  Der römiſche Hauptmann}
+  \par\bigskip
+
   \begin{movement}{wosindwir}
     \voice[Das Volk]
-    Wo ſind wir? wir? die Furcht und Schrecken
-    und grauſe Dunkelheit bedecken?
-    Wir fühlen des Todes erſchreckliche Nacht!
-    O! deine Rache, Jehovah! erwacht!
-    Du zürneſt — du rächeſt — wen? dieſen Verbrecher? —
-    Nein, Herr! du biſt nicht des Gekreuzigten Rächer.
-    Du ſtrafeſt? — wer ſündigte? — tödtende Nacht!
-    Frolocke, Mizraim! dein Schickſal erwacht!
+    Wo ſind wir? wir? die Furcht und Schrecken\\
+    und grauſe Dunkelheit bedecken?\\
+    Wir fühlen des Todes erſchreckliche Nacht!\\
+    O! deine Rache, Jehovah! erwacht!\\
+    Du zürneſt — du rächeſt — wen? dieſen Verbrecher? —\\
+    Nein, Herr! du biſt nicht des Gekreuzigten Rächer.\\
+    Du ſtrafeſt? — wer ſündigte? — tödtende Nacht!\\
+    Frolocke, Mizraim! dein Schickſal erwacht!\\
     Der Herr hat ſein Juda dir ähnlich gemacht!
   \end{movement}
 
   \begin{movement}{werduauch}
     \voice[Einer aus dem Volke]
-    Wer du auch ſeyſt, den man dort angeheftet hat,
-    wer du auch ſeyſt, Mesſias, oder ein Verräther,
-    Gott, oder auch ein Miſſethäter!
-    Du biſt der Mann, der nun, o ſchwarze That!
-    die grauſe Finſterniß erſchaffen.
-    Du tödteſt uns mit neuerfundnen Waffen!
+    Wer du auch ſeyſt, den man dort angeheftet hat,\\
+    wer du auch ſeyſt, Mesſias, oder ein Verräther,\\
+    Gott, oder auch ein Miſſethäter!\\
+    Du biſt der Mann, der nun, o ſchwarze That!\\
+    die grauſe Finſterniß erſchaffen.\\
+    Du tödteſt uns mit neuerfundnen Waffen!\\
     O! richteten die Prieſter auch wohl recht? —
 
     \voice[Ein andrer aus dem Volke]
-    Unglücklichs Land! unſeliges Geſchlecht!
-    Verloren ſind wir ſchon. Es nähert ſich die Stunde
-    des Unglücks, des Verderbens,
-    des Todes, des niemals erhörten Sterbens.
-    Verdammter Rath! durch dich geht Gottes Volk zu Grunde.
-    Ohnfehlbar iſt er der Mesſias, und unſchuldig.
+    Unglücklichs Land! unſeliges Geſchlecht!\\
+    Verloren ſind wir ſchon. Es nähert ſich die Stunde\\
+    des Unglücks, des Verderbens,\\
+    des Todes, des niemals erhörten Sterbens.\\
+    Verdammter Rath! durch dich geht Gottes Volk zu Grunde.\\
+    Ohnfehlbar iſt er der Mesſias, und unſchuldig.\\
     Hoch rächet er ſich nun. —
 
     \voice[Die Weiber und die Gläubigen]
-    \hspace*{3cm}Ja! Heil! Mesſias! Gott!
+    \hspace*{3cm}Ja! Heil! Mesſias! Gott!\\
     Unſchuldig biſt du, Herr! Du, deiner Feinde Spott!
 
     \voice[Eine aus den Weibern]
-    Ja! dies bezeugt die nun erblaßte Sonne.
-    Du ſtirbſt. Es ſtirbt mit dir auch unſre Wonne
+    Ja! dies bezeugt die nun erblaßte Sonne.\\
+    Du ſtirbſt. Es ſtirbt mit dir auch unſre Wonne\\
     und unſre Hoffnung —
 
     \voice[Die Weiber und die Gläubigen]
-    \hspace*{3cm}Herr! nun rächet dich der Himmel!
+    \hspace*{3cm}Herr! nun rächet dich der Himmel!\\\strut
 
     \voice[Einer aus dem Volke]
-    Verdammtes Urtheil! Pilatus! Prieſter! Rath!
+    Verdammtes Urtheil! Pilatus! Prieſter! Rath!\\\strut
 
     \voice[Das Volk]
     Man tödte ſie, die Schuldgen dieſer That!
 
     \voice[Der römiſche Hauptmann]
-    Welch raſendes Getümmel!
-    Volk, voller Angſt! welch eine finſtre Wut!
-    Wie? foderſt du noch deiner Vorgeſetzten Blut?
+    Welch raſendes Getümmel!\\
+    Volk, voller Angſt! welch eine finſtre Wut!\\
+    Wie? foderſt du noch deiner Vorgeſetzten Blut?\\
     Soldaten! wehrt dem Aufruhr! —
 
     \voice[Einer aus dem Volke]
-    \hspace*{3cm}Halt!
-    Nicht du, nicht deine Schaar hemmt Eifer und Gewalt;
-    dies thut ein ſtärkrer Arm, ein höhrer Ruf.
-    Die Finſterniß, durch die kein Strahl des Lichtes dringet,
-    hält uns zurück. Die iſts, die unſer Wüten zwinget.
-    Doch nein! vielmehr der, der ſie ſchuf.
+    \hspace*{3cm}Halt!\\
+    Nicht du, nicht deine Schaar hemmt Eifer und Gewalt;\\
+    dies thut ein ſtärkrer Arm, ein höhrer Ruf.\\
+    Die Finſterniß, durch die kein Strahl des Lichtes dringet,\\
+    hält uns zurück. Die iſts, die unſer Wüten zwinget.\\
+    Doch nein! vielmehr der, der ſie ſchuf.\\
     Und, o Gewaltiger! Jehovah! der biſt Du!
 
     \voice[Das Volk]
-    O Finſterniß! o Nacht! iſt keine Rettung da?
+    O Finſterniß! o Nacht! iſt keine Rettung da?\\
     Verflucht ſey Kaiphas! verflucht ſey Golgatha!
 
     \voice[Der Hauptmann]
-    Cäcil, auf eile nach Jeruſalem,
+    Cäcil, auf eile nach Jeruſalem,\\
     die Schaaren zu verſtärken! —
 
     \voice[Ein Soldat]
-    \hspace*{3cm}Herr! wer findet eine Bahn
+    \hspace*{3cm}Herr! wer findet eine Bahn\\
     in dieſer dicken Nacht?
 
     \voice[Der Hauptmann]
-    \hspace*{3cm}Angſt, Zittern, Furcht und Schrecken!
+    \hspace*{3cm}Angſt, Zittern, Furcht und Schrecken!\\
     Wie? ſollen die mich auch, wie dieſes Volk, bedecken?
 
     \voice[Ein andrer aus dem Volke]
     Ach! es iſt aus mit uns? Was haben wir gethan?
 
     \voice[Die römiſchen Soldaten]
-    Helft, Götter! helft! Verdammte Zaubernacht!
+    Helft, Götter! helft! Verdammte Zaubernacht!\\
     Hier wird man ohne Feind im Finſtern umgebracht.
 
     \voice[Maria]
-    Ach ſtütze mich, Johann! mein neuer Sohn!
-    Mich! die nicht mehr vor Schrecken ſtehen kann.
-    Welch Unglück prophezeyht die traurge Dunkelheit?
-    Die bange Finſterniß, die mich verhindert,
-    mein Heil und meinen Sohn im Sterben anzuſehn?
-    Sein ſanfter Blick, der ſonſt in tiefſter Traurigkeit
-    aufs ſüſſeſte die bängſten Schmerzen mindert,
-    fließt nicht mehr in mein Herz. Sein Ohr hört nicht mein Flehn.
-    Ach Sohn! ach Gott! ach! lebſt du, oder nicht?
+    Ach ſtütze mich, Johann! mein neuer Sohn!\\
+    Mich! die nicht mehr vor Schrecken ſtehen kann.\\
+    Welch Unglück prophezeyht die traurge Dunkelheit?\\
+    Die bange Finſterniß, die mich verhindert,\\
+    mein Heil und meinen Sohn im Sterben anzuſehn?\\
+    Sein ſanfter Blick, der ſonſt in tiefſter Traurigkeit\\
+    aufs ſüſſeſte die bängſten Schmerzen mindert,\\
+    fließt nicht mehr in mein Herz. Sein Ohr hört nicht mein Flehn.\\
+    Ach Sohn! ach Gott! ach! lebſt du, oder nicht?\\
     Vielleicht, daß nun dein Aug’ im Tod’ entſchlummernd bricht!
   \end{movement}
 
   \begin{movement}{otoedtet}
     \voice[Maria]
-    O! tödtet mich nur auch, vermeßne Schaaren!
+    O! tödtet mich nur auch, vermeßne Schaaren!\\
     Mein Sohn iſt todt: ſo tödtet nun auch mich!
 
     \voice[Jeſus]
     Maria!
 
     \voice[Maria]
-    Herr! ſo rufſt du warnend mir noch zu?
-    Du lebſt, mein Heil! du ſegneſt meine Ruh!
-    Doch ach! was ſoll mir dieſes Leben nützen?
-    Wer wird mich nun im höhern Alter ſtützen?
-    Was iſt Maria ohne dich?
-    Ach Gott! was muß die Mutter deines Sohns erfahren?
-    Mein Schmerz erwacht, der Troſt verlieret ſich.
-    Drum tödtet mich nur auch, vermeßne Schaaren!
+    Herr! ſo rufſt du warnend mir noch zu?\\
+    Du lebſt, mein Heil! du ſegneſt meine Ruh!\\
+    Doch ach! was ſoll mir dieſes Leben nützen?\\
+    Wer wird mich nun im höhern Alter ſtützen?\\
+    Was iſt Maria ohne dich?\\
+    Ach Gott! was muß die Mutter deines Sohns erfahren?\\
+    Mein Schmerz erwacht, der Troſt verlieret ſich.\\
+    Drum tödtet mich nur auch, vermeßne Schaaren!\\
     Mein Sohn iſt todt: ſo tödtet nun auch mich!
   \end{movement}
 
   \begin{movement}{achheiland}
     \voice[Maria]
-    Ach! Heiland! Sohn! ach tröſte mich! —
-    Mich tröſte mit der Stimme deines Mundes! —
-    Dein Wort iſt ſüſſer noch, als Milch und Honigſeim. —
-    Und ach! was bin ich ohne dich?
-    Und biſt du denn — doch ja! du biſt
-    der Stifter eines neuen Bundes:
-    O Herr! ſo ſieh auf uns, auf unſre bangen Schmerzen!
-    Ergieße deinen Troſt, der unſer Labſal iſt,
-    in unſre tiefgebeugte Herzen!
-    Sieh durch die dicke Nacht ins Dunkle meiner Seelen,
-    wo tauſend Martern mich, mich deine Mutter, quälen.
-    Erlöſer! — Seelenfreund! — Ach Sohn! — Die Worte fehlen mir —
+    Ach! Heiland! Sohn! ach tröſte mich! —\\
+    Mich tröſte mit der Stimme deines Mundes! —\\
+    Dein Wort iſt ſüſſer noch, als Milch und Honigſeim. —\\
+    Und ach! was bin ich ohne dich?\\
+    Und biſt du denn — doch ja! du biſt\\
+    der Stifter eines neuen Bundes:\\
+    O Herr! ſo ſieh auf uns, auf unſre bangen Schmerzen!\\
+    Ergieße deinen Troſt, der unſer Labſal iſt,\\
+    in unſre tiefgebeugte Herzen!\\
+    Sieh durch die dicke Nacht ins Dunkle meiner Seelen,\\
+    wo tauſend Martern mich, mich deine Mutter, quälen.\\
+    Erlöſer! — Seelenfreund! — Ach Sohn! — Die Worte fehlen mir —\\
     die Zunge ſtarrt — ach! —
 
     \voice[Johannes]
-    \hspace*{3cm}Gott! mein Herr! mein Meiſter!
-    Im Geiſte nah ich mich zu dir.
-    Anbetenswürdiger! Du kenneſt meine Triebe:
-    Ich bin durchaus entflammt von deiner heilgen Liebe.
-    Herr! dieſe dunklen Stunden,
-    die deine Mörder ſelbſt durchdringend rühren,
-    umnebeln auch mein Herz, und tödten mich mit Wunden,
-    die ganz unheilbar ſind. Herr! dich, dich zu verlieren —
-    Gedanke! ſchwärzer, als die Nacht, die uns umhüllt! —
-    Herr! der Verluſt wirft mich in eine Gruft von Schrecken,
-    aus der mich, auſſer du, nichts wird, nichts kann erwecken. —
-    Wiewohl! — Vielleicht erwachſt du wieder! —
-    die Hoffnung! — würde ſie erfüllt! —
-    O! Freude herrſcht ſie ſchon durch alle meine Glieder. —
-    Ja! Herr, du wirſt, nach dreyer Tage Friſt,
-    du ſagſt es ſelbſt, aufs neu erwachen,
-    und dieſen Tempel, der nun faſt zerſtöret iſt,
-    aufs neue baun, und zwar weit herrlicher.
-    Du wirſt ihn auch weit unvergänglicher,
-    weit ſchöner machen,
-    als er zuvor geweſen. — Heiland! — Ja, es iſt gewiß!
+    \hspace*{3cm}Gott! mein Herr! mein Meiſter!\\
+    Im Geiſte nah ich mich zu dir.\\
+    Anbetenswürdiger! Du kenneſt meine Triebe:\\
+    Ich bin durchaus entflammt von deiner heilgen Liebe.\\
+    Herr! dieſe dunklen Stunden,\\
+    die deine Mörder ſelbſt durchdringend rühren,\\
+    umnebeln auch mein Herz, und tödten mich mit Wunden,\\
+    die ganz unheilbar ſind. Herr! dich, dich zu verlieren —\\
+    Gedanke! ſchwärzer, als die Nacht, die uns umhüllt! —\\
+    Herr! der Verluſt wirft mich in eine Gruft von Schrecken,\\
+    aus der mich, auſſer du, nichts wird, nichts kann erwecken. —\\
+    Wiewohl! — Vielleicht erwachſt du wieder! —\\
+    die Hoffnung! — würde ſie erfüllt! —\\
+    O! Freude herrſcht ſie ſchon durch alle meine Glieder. —\\
+    Ja! Herr, du wirſt, nach dreyer Tage Friſt,\\
+    du ſagſt es ſelbſt, aufs neu erwachen,\\
+    und dieſen Tempel, der nun faſt zerſtöret iſt,\\
+    aufs neue baun, und zwar weit herrlicher.\\
+    Du wirſt ihn auch weit unvergänglicher,\\
+    weit ſchöner machen,\\
+    als er zuvor geweſen. — Heiland! — Ja, es iſt gewiß!\\
     Dann weichen Furcht und Angſt; dann weicht die Finſterniß.
 
     \voice[Eidli]
-    Mein Lazarus! mein mir von Gott geſchaffner Freund!
-    Mein Liebſter! ſäheſt du, wie dieſes Auge weint!
-    Es weint — ach Gott! — Still, wie der Tod,
-    werd ich durch die Empfindung dieſer Noth,
-    die alles Land bedeckt.
-    Nicht, weil die Finſterniß die bange Welt erſchreckt,
-    nein, Freund! weil unſer Helfer ſtirbt;
-    da der Erwecker ſtirbt, der dir und mir das Leben
-    aufs neu ehmals allmächtig hat gegeben,
+    Mein Lazarus! mein mir von Gott geſchaffner Freund!\\
+    Mein Liebſter! ſäheſt du, wie dieſes Auge weint!\\
+    Es weint — ach Gott! — Still, wie der Tod,\\
+    werd ich durch die Empfindung dieſer Noth,\\
+    die alles Land bedeckt.\\
+    Nicht, weil die Finſterniß die bange Welt erſchreckt,\\
+    nein, Freund! weil unſer Helfer ſtirbt;\\
+    da der Erwecker ſtirbt, der dir und mir das Leben\\
+    aufs neu ehmals allmächtig hat gegeben,\\
     als unſer Körper kalt, erſtarrt, entſeelet war.
 
     \voice[Lazarus]
-    Mich macht mein Kummer ſtumm, — die matten Glieder beben, —
-    das Mark in dem Gebein gerinnt, das Blut ſteht ſtill —
-    wird ſtarr und kalt — wie ehmals mir geſchah,
-    als mich die Lebenskraft verließ,
-    und dieſem Leib der Tod den Geiſt entriß. —
-    Mit Ach und Weh erfülltes Golgatha! —
-    Ich weiß nicht, was ich denk und will —
-    mein weinend Auge bricht —
-    und würde ſchon die Finſterniß verſchwinden:
-    So würde mein gebrochnes Augenlicht
-    doch keinen Strahl des Lichts empfinden.
-    Mein Herr! mein Gott! Mesſias! Tröſter! Ach! —
-    Nie, Juda! drückte dich ein ähnlich ſtarker Schmerz —
-    durchſchaudernd überſtrömt das ängſtlichbängſte Herz
-    ein kalter Thränenbach —
+    Mich macht mein Kummer ſtumm, — die matten Glieder beben, —\\
+    das Mark in dem Gebein gerinnt, das Blut ſteht ſtill —\\
+    wird ſtarr und kalt — wie ehmals mir geſchah,\\
+    als mich die Lebenskraft verließ,\\
+    und dieſem Leib der Tod den Geiſt entriß. —\\
+    Mit Ach und Weh erfülltes Golgatha! —\\
+    Ich weiß nicht, was ich denk und will —\\
+    mein weinend Auge bricht —\\
+    und würde ſchon die Finſterniß verſchwinden:\\
+    So würde mein gebrochnes Augenlicht\\
+    doch keinen Strahl des Lichts empfinden.\\
+    Mein Herr! mein Gott! Mesſias! Tröſter! Ach! —\\
+    Nie, Juda! drückte dich ein ähnlich ſtarker Schmerz —\\
+    durchſchaudernd überſtrömt das ängſtlichbängſte Herz\\
+    ein kalter Thränenbach —\\
     du ſtirbſt —
 
     \voice[Eidli]
@@ -227,286 +234,286 @@ Ein Soldat (B)
     Du ſtirbſt — wen muß dieß nicht erſchütterndtödlich kränken?
 
     \voice[Eidli und Lazarus]
-    Wie? mußten wir denn darum auferſtehen,
+    Wie? mußten wir denn darum auferſtehen,\\
     um hier auf Golgatha, Herr! deinen Tod zu ſehen?
   \end{movement}
 
   \begin{movement}{duherrscher}
     \voice[Eidli]
-    Du Herrſcher über Tod und Leben!
-    Nimm hin das, was du mir gegeben.
+    Du Herrſcher über Tod und Leben!\\
+    Nimm hin das, was du mir gegeben.\\
     Stirb ohne deine Eidli nicht!
 
     \voice[Lazarus]
-    Zu meiner Gruft, der Freunde Schrecken,
-    kamſt du, mein Heil, mich aufzuwecken,
+    Zu meiner Gruft, der Freunde Schrecken,\\
+    kamſt du, mein Heil, mich aufzuwecken,\\
     zu ſehn, wie itzt dein Auge bricht.
 
     \voice[Eidli und Lazarus]
-    O Jeſu! Freund! dieß Leben ſchenkſt du mir:
+    O Jeſu! Freund! dieß Leben ſchenkſt du mir:\\
     Nimm dein Geſchenk im Tode doch zu dir!
 
     \voice[Eidli]
-    Zwar, Freund! bindt uns das Band der reinſten Liebe;
-    doch wie? vergnügen irrdſche Triebe,
+    Zwar, Freund! bindt uns das Band der reinſten Liebe;\\
+    doch wie? vergnügen irrdſche Triebe,\\
     wenn mir mein Heil, mein Jeſus, ſtirbt?
 
     \voice[Lazarus]
-    Zwar, Freundinn! fand in deinem frommen Blicke
-    ehmals mein Aug’ ein edles Glücke;
+    Zwar, Freundinn! fand in deinem frommen Blicke\\
+    ehmals mein Aug’ ein edles Glücke;\\
     doch was iſt das, wenn Jeſus ſtirbt?
 
     \voice[Eidli und Lazarus]
-    Ja, Herr! nimm Neigung, Leben, alles hin!
+    Ja, Herr! nimm Neigung, Leben, alles hin!\\
     Wohl mir, wenn ich im Tode bey dir bin!
   \end{movement}
 
   \begin{movement}{wieliebens}
     \voice[Johannes]
-    Wie liebenswürdig ſind die Triebe
-    der göttlichen, der heilgen Jeſusliebe,
-    die euch und mich zu dieſem Kreuze zieht!
-    In dieſer Finſterniß, da Alles ſeufzt und weinet,
-    da uns kein Troſt, kein Hoffnungslicht erſcheinet,
-    da auch dem Auge ſelbſt der Hoffnungsquell entflieht:
-    Wer wollt’ um den Verluſt nicht kläglich wimmernd zagen?
-    Wer wollte nicht, mein Heil! um dich mit Jammer klagen?
-    Mit Jammer! der ſogar die Wut der Feind’ erſtickt,
-    indem die Todesnacht ihr Raſen unterdrückt.
-    O grauſame, o fürchterliche Schatten!
-    Entzieht den Augen nicht das, was den Geiſt erquickt!
-    Entzieht den Augen nicht den Urquell meiner Liebe,
-    den heilgen Gegenſtand der undurchforſchten Triebe!
-    Stärkt nur ein einzigmal mich Matten
-    mit einem dunklen Licht. Denn ach! das größte Leiden,
-    das Schrecklichſte iſt dies: den heilgen Blick zu meiden,
-    von dem mein Leben ſtammt.
-    O! flöſſe dieſer nur in das gepreßte Herz:
-    O! ſo ertrug es willig ſeinen Schmerz!
+    Wie liebenswürdig ſind die Triebe\\
+    der göttlichen, der heilgen Jeſusliebe,\\
+    die euch und mich zu dieſem Kreuze zieht!\\
+    In dieſer Finſterniß, da Alles ſeufzt und weinet,\\
+    da uns kein Troſt, kein Hoffnungslicht erſcheinet,\\
+    da auch dem Auge ſelbſt der Hoffnungsquell entflieht:\\
+    Wer wollt’ um den Verluſt nicht kläglich wimmernd zagen?\\
+    Wer wollte nicht, mein Heil! um dich mit Jammer klagen?\\
+    Mit Jammer! der ſogar die Wut der Feind’ erſtickt,\\
+    indem die Todesnacht ihr Raſen unterdrückt.\\
+    O grauſame, o fürchterliche Schatten!\\
+    Entzieht den Augen nicht das, was den Geiſt erquickt!\\
+    Entzieht den Augen nicht den Urquell meiner Liebe,\\
+    den heilgen Gegenſtand der undurchforſchten Triebe!\\
+    Stärkt nur ein einzigmal mich Matten\\
+    mit einem dunklen Licht. Denn ach! das größte Leiden,\\
+    das Schrecklichſte iſt dies: den heilgen Blick zu meiden,\\
+    von dem mein Leben ſtammt.\\
+    O! flöſſe dieſer nur in das gepreßte Herz:\\
+    O! ſo ertrug es willig ſeinen Schmerz!\\
     So aber iſt es, Gott! zum ſchwärzſten Gram verdammt.
   \end{movement}
 
   \begin{movement}{fliesstzitternde}
     \voice[Johannes]
-    Fließt, zitternde Thränen, entdecket mein Leiden!
-    Dich ſoll ich, o zärtlichſter Gegenſtand, meiden.
-    Es hat mich dieß tödtende Dunkel der Nacht
+    Fließt, zitternde Thränen, entdecket mein Leiden!\\
+    Dich ſoll ich, o zärtlichſter Gegenſtand, meiden.\\
+    Es hat mich dieß tödtende Dunkel der Nacht\\
     auch um deine Blicke, mein Liebſter! gebracht.
 
-    Und obſchon die Hoffnung, zwar dunkler, als Nächte,
-    mich Weinenden tröſtend zu ſtärken gedächte;
-    und obſchon ein Fünkchen des Lichtes erwacht:
+    Und obſchon die Hoffnung, zwar dunkler, als Nächte,\\
+    mich Weinenden tröſtend zu ſtärken gedächte;\\
+    und obſchon ein Fünkchen des Lichtes erwacht:\\
     So tödtet doch Hoffnung und Alles die Nacht.
   \end{movement}
 
   \begin{movement}{dochherz}
     \voice[Johannes]
-    Doch Herz! von manchen Wiederſprüchen voll!
-    Verzweifle nicht! bald, bald vergeht die Nacht;
-    bald, bald erſcheint die Zeit, da Jeſus dir erwacht!
-    Wie? hab ich nicht zuvor, ich ſelbſt? daran gedacht?
-    Ja, dieſer Troſt hat ſchon mein Herz erhellt gemacht.
-    Was pochſt du Herz? Sein Wort beſtimmt gewiß
-    das, was geſchehen ſoll,
-    und bald entweicheſt du, grauſame Finſterniß!
-    Doch, bis dieß Wort, Herr! zur Erfüllung wird gebracht,
-    ſo lange will ich, Freunde, mit euch weinen;
-    denn keine Thränen ſind zu viel.
-    Getroſt! der Schmerz währt eine kurze Zeit:
-    ſein liebreich Angeſicht wird glänzend bald erſcheinen,
-    zertheilt die Angſt, ſo wie die Dunkelheit,
+    Doch Herz! von manchen Wiederſprüchen voll!\\
+    Verzweifle nicht! bald, bald vergeht die Nacht;\\
+    bald, bald erſcheint die Zeit, da Jeſus dir erwacht!\\
+    Wie? hab ich nicht zuvor, ich ſelbſt? daran gedacht?\\
+    Ja, dieſer Troſt hat ſchon mein Herz erhellt gemacht.\\
+    Was pochſt du Herz? Sein Wort beſtimmt gewiß\\
+    das, was geſchehen ſoll,\\
+    und bald entweicheſt du, grauſame Finſterniß!\\
+    Doch, bis dieß Wort, Herr! zur Erfüllung wird gebracht,\\
+    ſo lange will ich, Freunde, mit euch weinen;\\
+    denn keine Thränen ſind zu viel.\\
+    Getroſt! der Schmerz währt eine kurze Zeit:\\
+    ſein liebreich Angeſicht wird glänzend bald erſcheinen,\\
+    zertheilt die Angſt, ſo wie die Dunkelheit,\\
     und ſetzt dem kurzen Gram ein froherreichtes Ziel.
   \end{movement}
 
   \begin{movement}{omatter}
     \voice[Die Weiber und die Gläubigen]
-    O matter Troſt bey ſo viel Kummer!
-    Er liegt ja ſchon im Todesſchlummer,
-    nicht einen Seufzer höret man.
-    Sein Aug iſt dunkler, als die Lüfte.
-    O Tod! eröffne deine Grüfte!
+    O matter Troſt bey ſo viel Kummer!\\
+    Er liegt ja ſchon im Todesſchlummer,\\
+    nicht einen Seufzer höret man.\\
+    Sein Aug iſt dunkler, als die Lüfte.\\
+    O Tod! eröffne deine Grüfte!\\
     Verſchling ein Volk, das nicht mehr leben kann.
 
     \voice[Maria]
-    Mein Sohn! hör deines Volks betrübtes Seufzen an!
-    Verlaſſen ſtehn die Deinen.
-    Mein Sohn! erbarmt dich nicht der Mutter ängſtlich Weinen?
-    Biſt du nicht mehr zu unſrer Rettung nah?
-    Ein jeder ſteht und harrt, auf was? nur aufs Verderben.
-    Ein jeder ſeufzt und hofft, allhier auf Golgatha
-    zum wenigſten mit dir zu ſterben.
+    Mein Sohn! hör deines Volks betrübtes Seufzen an!\\
+    Verlaſſen ſtehn die Deinen.\\
+    Mein Sohn! erbarmt dich nicht der Mutter ängſtlich Weinen?\\
+    Biſt du nicht mehr zu unſrer Rettung nah?\\
+    Ein jeder ſteht und harrt, auf was? nur aufs Verderben.\\
+    Ein jeder ſeufzt und hofft, allhier auf Golgatha\\
+    zum wenigſten mit dir zu ſterben.\\
     Kein einzger wünſchet, dich zu überleben.
 
     \voice[Eidli]
     Mein Wunſch, mein ganzer Wunſch ſtimmt damit überein.
 
     \voice[Die Weiber und die Gläubigen]
-    Kann wohl ein andrer Wunſch uns Armen möglich ſeyn?
+    Kann wohl ein andrer Wunſch uns Armen möglich ſeyn?\\\strut
 
     \voice[Eidli]
-    Das, was er mir ſonſt gab, mein wundervolles Leben,
-    verlang ich nicht mehr zu genieſſen.
-    Es konnte blos aus ihm die Luft des Lebens flieſſen.
-    Was Leben! o Verluſt! der Retter ſelbſt iſt todt —
+    Das, was er mir ſonſt gab, mein wundervolles Leben,\\
+    verlang ich nicht mehr zu genieſſen.\\
+    Es konnte blos aus ihm die Luft des Lebens flieſſen.\\
+    Was Leben! o Verluſt! der Retter ſelbſt iſt todt —\\
     ach todt — ohnfehlbar iſt ſein Augenlicht erblaßt —
 
     \voice[Lazarus]
-    Ohnfehlbar iſt mein Heil, mein Auferwecker todt.
-    Nun fühl ich erſt des Lebens ſchwere Laſt. —
-    Doch Herr! — und lebſt du noch? — Du? — Quell von meinem Leben —
+    Ohnfehlbar iſt mein Heil, mein Auferwecker todt.\\
+    Nun fühl ich erſt des Lebens ſchwere Laſt. —\\
+    Doch Herr! — und lebſt du noch? — Du? — Quell von meinem Leben —\\
     Wie? — oder haſt du ſchon den Geiſt — ach! aufgegeben? —
 
     \voice[Die Weiber und die Gläubigen]
-    Ach! er iſt todt! — Ja! — dieſe Schreckensnacht
+    Ach! er iſt todt! — Ja! — dieſe Schreckensnacht\\
     hat uns um unſern Herrn, um alle Ruh gebracht!
 
     \voice[Johannes]
-    Getroſt! verzaget nicht! Erwartet größre Thaten!
-    Schon hab ichs euch geſagt. Ich bin noch mehr bewegt,
-    indem ein höhrer Trieb des Troſtes mich erregt. —
-    Weiſſagend ruf ich euch in ſelger Hoffnung zu:
-    Es eilet im Triumph der Held nunmehr zur Ruh.
+    Getroſt! verzaget nicht! Erwartet größre Thaten!\\
+    Schon hab ichs euch geſagt. Ich bin noch mehr bewegt,\\
+    indem ein höhrer Trieb des Troſtes mich erregt. —\\
+    Weiſſagend ruf ich euch in ſelger Hoffnung zu:\\
+    Es eilet im Triumph der Held nunmehr zur Ruh.\\
     Ihm ſoll zum Wohl der Welt der größte Sieg gerathen!
 
     \voice[Maria]
-    Ich weiß nicht, welcher Trieb dem Ausſpruch Beyfall giebt.
-    Mein theurſter Sohn, mein Gott, der mich ſo ſehr geliebt,
-    wird Marter, Kreuz und Tod und Grab
-    zu Quellen eines Heils, das uns verewget, machen.
+    Ich weiß nicht, welcher Trieb dem Ausſpruch Beyfall giebt.\\
+    Mein theurſter Sohn, mein Gott, der mich ſo ſehr geliebt,\\
+    wird Marter, Kreuz und Tod und Grab\\
+    zu Quellen eines Heils, das uns verewget, machen.\\
     Ihr Gläubgen! ſeyd getroſt! legt Furcht und Trauren ab!
 
     \voice[Die Weiber und die Gläubigen]
-    Ach! wäre dieß gewiß! ach! mögt er bald erwachen!
+    Ach! wäre dieß gewiß! ach! mögt er bald erwachen!\\\strut
   \end{movement}
 
   \begin{movement}{selge}
     \voice[Maria]
-    Selge Hoffnung! wie ſtärkſt du die Glieder!
-    Glieder! ſtarr von Furcht und Tod.
-    Süſſer Jeſus! ja, wir leben wieder,
-    und erwarten ſtill das Ende dieſer Noth.
-    Held! ja, dir wird bald der Sieg gerathen.
+    Selge Hoffnung! wie ſtärkſt du die Glieder!\\
+    Glieder! ſtarr von Furcht und Tod.\\
+    Süſſer Jeſus! ja, wir leben wieder,\\
+    und erwarten ſtill das Ende dieſer Noth.\\
+    Held! ja, dir wird bald der Sieg gerathen.\\
     Uns beleben ſchon die Früchte deiner Thaten!
 
     \voice[Die Weiber und die Gläubigen]
-    Held! ja, dir wird bald der Sieg gerathen.
+    Held! ja, dir wird bald der Sieg gerathen.\\
     Uns beleben ſchon die Früchte deiner Thaten!
   \end{movement}
 
   \begin{movement}{wasfuer}
     \voice[Der römiſche Hauptmann]
-    Was für ein Volk iſt das? Itzt, da die Finſterniß
-    die Welt ſo furchtbar ſchrecket,
-    und eine ſchwarze Nacht
-    uns bis aufs Äuſſerſte der bängſten Furcht gebracht, —
-    (O! eine Finſterniß! die ſelbſt den Tag verdecket!)
-    faſt zittr’ ich! — Itzt da dieſe Schreckensnacht
-    auf nieerhörte Art den Himmel ganz verdunkelt,
-    daß auch kein einzger Stern, kein mattes Wölkchen funkelt,
-    daß man nicht Himmel, Luft, nicht Erd und Menſchen ſieht,
-    nicht ſeinen Nachbar merkt, nicht Schwerdt und Harniſch blinken,
-    da, wenn man fällt, man in den Abgrund denkt zu ſinken,
-    da man vor Angſt ſich ſelbſt und alles flieht,
-    und doch ſich fürchtet, zu entfliehen,
-    da auch die Kühnſten ſich dem Schrecken nicht entziehen,
-    die Helden ſtill und heimlich ächzen,
-    von tiefen Seufzern alle Gaumen lechzen:
-    Wie? da erholen ſich der ſchwachen Weiber Herzen,
-    und ſiegen über uns und über Angſt und Schmerzen? —
-    Zertheile Jupiter! — doch nein! —
-    hat Jupiter wohl Theil an ſo viel Wundern? —
-    Wie? — Nicht ein Jupiter! — Es muß ein höhres Weſen ſeyn. —
-    Ein Sterbender! — um den die Sonne ſelbſt verſchwindet —
-    Und Weiber — die im Schrecken herzhaft werden —
-    furchtſame Männer — ſonſt die feigſten dieſer Erden,
-    von einem ſchwachen Strahl der Hoffnung ſtark entzündet —
-    dort ein Gekreuzigter — von Geiſſeln ganz zerriſſen,
-    voll Wunden ohne Zahl, matt, kraftlos, todt und kalt, —
-    dem väterlichen Volk zum Scheuſal aufgeſtellt —
-    und kurz: ein Schimpf, ein Spott der Welt —
-    der, der flößt noch mit unbegreiflicher Gewalt
-    dem Häuflein, das ihn ehrt, Geduld und Hoffnung ein? —
+    Was für ein Volk iſt das? Itzt, da die Finſterniß\\
+    die Welt ſo furchtbar ſchrecket,\\
+    und eine ſchwarze Nacht\\
+    uns bis aufs Äuſſerſte der bängſten Furcht gebracht, —\\
+    (O! eine Finſterniß! die ſelbſt den Tag verdecket!)\\
+    faſt zittr’ ich! — Itzt da dieſe Schreckensnacht\\
+    auf nieerhörte Art den Himmel ganz verdunkelt,\\
+    daß auch kein einzger Stern, kein mattes Wölkchen funkelt,\\
+    daß man nicht Himmel, Luft, nicht Erd und Menſchen ſieht,\\
+    nicht ſeinen Nachbar merkt, nicht Schwerdt und Harniſch blinken,\\
+    da, wenn man fällt, man in den Abgrund denkt zu ſinken,\\
+    da man vor Angſt ſich ſelbſt und alles flieht,\\
+    und doch ſich fürchtet, zu entfliehen,\\
+    da auch die Kühnſten ſich dem Schrecken nicht entziehen,\\
+    die Helden ſtill und heimlich ächzen,\\
+    von tiefen Seufzern alle Gaumen lechzen:\\
+    Wie? da erholen ſich der ſchwachen Weiber Herzen,\\
+    und ſiegen über uns und über Angſt und Schmerzen? —\\
+    Zertheile Jupiter! — doch nein! —\\
+    hat Jupiter wohl Theil an ſo viel Wundern? —\\
+    Wie? — Nicht ein Jupiter! — Es muß ein höhres Weſen ſeyn. —\\
+    Ein Sterbender! — um den die Sonne ſelbſt verſchwindet —\\
+    Und Weiber — die im Schrecken herzhaft werden —\\
+    furchtſame Männer — ſonſt die feigſten dieſer Erden,\\
+    von einem ſchwachen Strahl der Hoffnung ſtark entzündet —\\
+    dort ein Gekreuzigter — von Geiſſeln ganz zerriſſen,\\
+    voll Wunden ohne Zahl, matt, kraftlos, todt und kalt, —\\
+    dem väterlichen Volk zum Scheuſal aufgeſtellt —\\
+    und kurz: ein Schimpf, ein Spott der Welt —\\
+    der, der flößt noch mit unbegreiflicher Gewalt\\
+    dem Häuflein, das ihn ehrt, Geduld und Hoffnung ein? —\\
     Der ſoll ein Troſt, ein Schutz, und ein Erretter ſeyn? —
   \end{movement}
 
   \begin{movement}{wobinich}
     \voice[Der römiſche Hauptmann]
-    Wo bin ich? — Was rühret mich? —
-    Verwirrung! — Entſetzen! — Nacht und Tod!
-    Und Sonne! — wo biſt du? — verſchwunden —
-    und was durchſchaudert mich? —
-    Sinds Schmerzen? — ſinds Wunden? —
-    Nein! — Herz! was bebſt du? — welche Noth! —
-    In Finſterniß — erbärmliche Geſtalt! —
-    Natur! — woher ſo ſchreckliche Gewalt? —
+    Wo bin ich? — Was rühret mich? —\\
+    Verwirrung! — Entſetzen! — Nacht und Tod!\\
+    Und Sonne! — wo biſt du? — verſchwunden —\\
+    und was durchſchaudert mich? —\\
+    Sinds Schmerzen? — ſinds Wunden? —\\
+    Nein! — Herz! was bebſt du? — welche Noth! —\\
+    In Finſterniß — erbärmliche Geſtalt! —\\
+    Natur! — woher ſo ſchreckliche Gewalt? —\\
     Gekreuzigter! — vielleicht durch dich?
   \end{movement}
 
   \begin{movement}{dochtraeum}
     \voice[Der römiſche Hauptmann]
-    Doch träum ich? — Wird es Tag? — Hilf Himmel! welcher Schein!
-    Welch Wunder! was geſchieht? — Die Sonne glänzet wieder?
+    Doch träum ich? — Wird es Tag? — Hilf Himmel! welcher Schein!\\
+    Welch Wunder! was geſchieht? — Die Sonne glänzet wieder?\\
     die Finſterniß entweicht, ſo plötzlich, als ſie kam!
 
     \voice[Das Volk]
     O Wunder!
 
     \voice[Eine aus den Weibern]
-    \hspace*{3cm} Jeſus lebt! lebt auch erſtorbne Glieder!
+    \hspace*{3cm} Jeſus lebt! lebt auch erſtorbne Glieder!\\\strut
 
     \voice[Die Weiber und die Gläubigen]
-    Er lebt!
+    Er lebt!\\\strut
 
     \voice[Einer aus dem Volke]
-    \hspace*{3cm}Es ſterben Furcht und Gram!
-    Getroſt! Gott iſt verſöhnt, ſein Zorn geſtillt.
-    Das Urtheil iſt nunmehr beſtätigt, bald erfüllt.
+    \hspace*{3cm}Es ſterben Furcht und Gram!\\
+    Getroſt! Gott iſt verſöhnt, ſein Zorn geſtillt.\\
+    Das Urtheil iſt nunmehr beſtätigt, bald erfüllt.\\
     Gott foderte des Nazareners Blut.
 
     \voice[Das Volk]
-    Wir Feigen zitterten aus bloßem Mißverſtande.
+    Wir Feigen zitterten aus bloßem Mißverſtande.\\
     Die Prieſter irrten nicht.
 
     \voice[Johannes]
-    \hspace*{3cm}O blinde Wut!
-    Unſelges Volk! der Menſchheit Schande!
-    Verſtockter Schwarm! den man, kaum da die Nacht entflieht,
-    in vorger Raſerey ſich tollkühn wälzen ſieht!
-    Den des Unſchuldigen halbtodtes Leben kränket,
-    das er mit neuem Grimm nun zu verfolgen denket.
-    Zwar Jeſus lebt. Doch kann das wohl ein Leben heiſſen,
-    das Wunden, Schmerz und Schmach und Todesangſt zerreiſſen?
-    Seht, Gottesmörder! Seht nur ſeine Martern an! —
+    \hspace*{3cm}O blinde Wut!\\
+    Unſelges Volk! der Menſchheit Schande!\\
+    Verſtockter Schwarm! den man, kaum da die Nacht entflieht,\\
+    in vorger Raſerey ſich tollkühn wälzen ſieht!\\
+    Den des Unſchuldigen halbtodtes Leben kränket,\\
+    das er mit neuem Grimm nun zu verfolgen denket.\\
+    Zwar Jeſus lebt. Doch kann das wohl ein Leben heiſſen,\\
+    das Wunden, Schmerz und Schmach und Todesangſt zerreiſſen?\\
+    Seht, Gottesmörder! Seht nur ſeine Martern an! —\\
     ſeht ſie! — erbebt! — ſeufzt, ächzt: was haben wir gethan?
 
     \voice[Jeſus]
     Mein Gott! mein Gott! warum haſt du mich verlaſſen?
 
     \voice[Die Weiber und die Gläubigen]
-    Ach! banger Ruf! wer kann die Deutung faſſen?
+    Ach! banger Ruf! wer kann die Deutung faſſen?\\\strut
 
     \voice[Johannes]
-    Jehovah! Gott! wie ſeufzt das Lamm!
-    das Lamm! das ſich bey dir für alle Welt verbürgt,
-    und das itzt an des Kreuzesſtamm
-    der Schuldner Undank ſelbſt erwürgt.
-    Wie ſeufzt das rechte Opferlamm,
-    das nun des Vaters Zorn im Innerſten der Seele fühlt,
-    das eine Angſt, die unbeſchreiblich iſt,
-    aufs Grauſamſte durchwühlt.
-    O Welt! ſieh! alle deine Sünden
-    muß itzt das Lamm aufs Schrecklichſte empfinden!
-    Von Gott verlaſſen! ach! wie unergründlich ſchwer
+    Jehovah! Gott! wie ſeufzt das Lamm!\\
+    das Lamm! das ſich bey dir für alle Welt verbürgt,\\
+    und das itzt an des Kreuzesſtamm\\
+    der Schuldner Undank ſelbſt erwürgt.\\
+    Wie ſeufzt das rechte Opferlamm,\\
+    das nun des Vaters Zorn im Innerſten der Seele fühlt,\\
+    das eine Angſt, die unbeſchreiblich iſt,\\
+    aufs Grauſamſte durchwühlt.\\
+    O Welt! ſieh! alle deine Sünden\\
+    muß itzt das Lamm aufs Schrecklichſte empfinden!\\
+    Von Gott verlaſſen! ach! wie unergründlich ſchwer\\
     quält dieſe Seelenangst! —
 
     \voice[Maria]
-    \hspace*{3cm} Sohn! Heiligſter!
-    War das die Seelenangſt, die in den finſtern Stunden,
-    du Sündentilger! haſt empfunden?
+    \hspace*{3cm} Sohn! Heiligſter!\\
+    War das die Seelenangſt, die in den finſtern Stunden,\\
+    du Sündentilger! haſt empfunden?\\
     War darum jenes Licht, der Sonnenglanz, verſchwunden?
 
     \voice[Die Weiber und die Gläubigen]
-    Angſt! Schrecklichſte! bey der die Sonne ſelbſt erblaßt!
+    Angſt! Schrecklichſte! bey der die Sonne ſelbſt erblaßt!\\\strut
 
     \voice[Lazarus]
     Wie unbeſchreiblich ſchwer preßt dich, Herr! unſrer Sünden Laſt!
@@ -515,37 +522,37 @@ Ein Soldat (B)
     Noch unbeſchreiblicher muß deine Marter ſeyn.
 
     \voice[Die Weiber und die Gläubigen]
-    Verlaſſen! ach! von Gott biſt du, gerechtes Lamm!
+    Verlaſſen! ach! von Gott biſt du, gerechtes Lamm!\\
     und doch, erretteſt du die undankbare Welt.
 
     \voice[Der römiſche Hauptmann]
-    Wer dringt in dieß Geheimniß ein?
+    Wer dringt in dieß Geheimniß ein?\\
     Wie? daß ſogar ein Schaudern mich befällt?
   \end{movement}
 
   \begin{movement}{martern}
     \voice[Maria]
-    Was für Martern, was für Plagen
+    Was für Martern, was für Plagen\\
     haſt du, Herr! bisher ertragen!
 
     \voice[Johannes]
-    Was für Striemen, Schläg’ und Wunden
+    Was für Striemen, Schläg’ und Wunden\\
     hat dein heilger Leib empfunden!
 
     \voice[Maria und Johannes]
-    Aber ach! dein innrer Seelenſchmerz
+    Aber ach! dein innrer Seelenſchmerz\\
     ach! der zerreißt weit ſchrecklicher dein Herz!
 
     \voice[Maria]
-    Für alle Welt wollſt du bezahlen:
+    Für alle Welt wollſt du bezahlen:\\
     drum duldſt du ſo viel Angſt und Qualen.
 
     \voice[Johannes]
-    Der Zorn des Vaters ſchnaubte Rache:
+    Der Zorn des Vaters ſchnaubte Rache:\\
     Du, Herr, vertratſt des Sünders Sache.
 
     \voice[Maria und Johannes]
-    Ja! den Sünder haſt du frey gemacht,
+    Ja! den Sünder haſt du frey gemacht,\\
     den, der Gottes Zorn auf dich gebracht.
   \end{movement}
 
@@ -554,39 +561,39 @@ Ein Soldat (B)
     Mich dürſtet!
 
     \voice[Johannes]
-    Dich dürſtet, Seelenfreund! nach ſo viel Pein und Plagen?
-    Was Wunder! du haſt ja des Tages Laſt getragen.
-    Doch warum dürſtet dich? was macht die Zunge matt?
-    Des Sünders Straf und Schuld, die er verdienet hat.
-    Dich dürſtet, Herr! nach unſrer Seligkeit,
-    und die erringſt du uns durch ſo viel Kampf und Streit.
-    Schaut, Menſchen, ſchaut den Herrn, den Lebensfürſten
-    blos eurer Sünden wegen dürſten.
-    Itzt, da die Marter ihn beynahe hat entſeelt,
-    da ihn die letzte Quahl vor ſeinem Tode quählt,
-    weil ihn des Sünders Hand den Mördern gleich gemacht,
-    da, da hat er an ſeine Henker noch gedacht.
+    Dich dürſtet, Seelenfreund! nach ſo viel Pein und Plagen?\\
+    Was Wunder! du haſt ja des Tages Laſt getragen.\\
+    Doch warum dürſtet dich? was macht die Zunge matt?\\
+    Des Sünders Straf und Schuld, die er verdienet hat.\\
+    Dich dürſtet, Herr! nach unſrer Seligkeit,\\
+    und die erringſt du uns durch ſo viel Kampf und Streit.\\
+    Schaut, Menſchen, ſchaut den Herrn, den Lebensfürſten\\
+    blos eurer Sünden wegen dürſten.\\
+    Itzt, da die Marter ihn beynahe hat entſeelt,\\
+    da ihn die letzte Quahl vor ſeinem Tode quählt,\\
+    weil ihn des Sünders Hand den Mördern gleich gemacht,\\
+    da, da hat er an ſeine Henker noch gedacht.\\
     Ihn dürſtet, auch nach ihrer Seligkeit.
 
     \voice[Maria]
-    Ihn dürſtet! — Seht — der Mörder wilde Gütigkeit:
-    ein herber Trank muß ſeiner letzten Pein
+    Ihn dürſtet! — Seht — der Mörder wilde Gütigkeit:\\
+    ein herber Trank muß ſeiner letzten Pein\\
     ein bittres Labſal ſeyn!
   \end{movement}
 
   \begin{movement}{duwirst}
     \voice[Die Weiber und die Gläubigen]
-    Du wirſt, o Herr! für unſre Sünden
-    mit einem herben Trank getränkt;
+    Du wirſt, o Herr! für unſre Sünden\\
+    mit einem herben Trank getränkt;\\
     und ach! bis in den Tod mit Spott und Hohn gekränkt.
 
-    Du mußt, da ſchon dein Auge bricht,
-    der Mund vertrocknet, bleich das Angeſicht,
-    die Bosheit deiner Feind empfinden;
+    Du mußt, da ſchon dein Auge bricht,\\
+    der Mund vertrocknet, bleich das Angeſicht,\\
+    die Bosheit deiner Feind empfinden;\\
     da doch dein Tod der Welt das Leben ſchenkt.
 
-    So wirſt du, Herr! für unſre Sünden
-    mit einem herben Trank getränkt;
+    So wirſt du, Herr! für unſre Sünden\\
+    mit einem herben Trank getränkt;\\
     und ach! bis in den Tod mit Spott und Hohn gekränkt.
   \end{movement}
 }
